# Diatom

./: .gitignore  CHANGELOG.md  LICENSE  PHYLOSOPHY.md  README.md  audit.toml
.github/workflows/: ci.yml  release.yml
shell/: Cargo.toml
shell/crates/diatom_agent/: Cargo.toml
shell/crates/diatom_agent/src/: executor.rs  planner.rs  runner.rs  tools.rs
shell/crates/diatom_bridge/: Cargo.toml
shell/crates/diatom_bridge/src/: client.rs  lib.rs  protocol.rs  server.rs  slm_adapter.rs  transport.rs  zed_link.rs
shell/crates/diatom_bridge/tests/: integration_handshake.rs
shell/crates/diatom_devtools/: Cargo.toml
shell/crates/diatom_ui/: Cargo.toml
src/: ai-panel.css  diatom.css  fonts.css  index.html  main.js  manifest.json  shadow-index.css  sw.js  tab-groups.css  tos-auditor.css
src-tauri/: Cargo.toml  default.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: diatom-api.js
src-tauri/src/: agent_commands.rs  blocker.rs  commands.rs  compat.rs  db.rs  decoy.rs  freeze.rs  labs.rs  main.rs  nostr.rs  passkey.rs  privacy.rs  rss.rs  sentinel.rs  slm.rs  state.rs  storage_guard.rs  tab_budget.rs  tabs.rs  threat.rs  totp.rs  trust.rs  war_report.rs  zen.rs
src-tauri/src/ai/: mcp.rs  mod.rs  renamer.rs  shadow_index.rs  slm.rs
src-tauri/src/auth/: mod.rs  passkey.rs  totp.rs  trust.rs
src-tauri/src/browser/: a11y.rs  boosts.rs  budget.rs  dev_panel.rs  dom_crusher.rs  mod.rs  proxy.rs  tabs.rs
src-tauri/src/commands/: ai.rs  auth.rs  browser.rs  data.rs  engine.rs  features.rs  mod.rs  privacy.rs  storage.rs  sync.rs  system.rs
src-tauri/src/engine/: bandwidth.rs  blocker.rs  cache.rs  compat.rs  ghostpipe.rs  mod.rs  monitor.rs  plugins.rs  url_stripper.rs
src-tauri/src/features/: breach.rs  compliance.rs  labs.rs  mod.rs  panic.rs  report.rs  rss.rs  search.rs  sentinel.rs  tos.rs  zen.rs
src-tauri/src/privacy/: config.rs  fingerprint_norm.rs  mod.rs  ohttp.rs  onion.rs  pir.rs  threat.rs  wifi.rs
src-tauri/src/research/: pricing.rs
src-tauri/src/storage/: freeze.rs  guard.rs  mod.rs  vault.rs  versioning.rs  warc_export.rs
src-tauri/src/storage/db/: auth.rs  core.rs  history.rs  mod.rs  museum.rs  tabs.rs  types.rs  vault.rs
src-tauri/src/sync/: marketplace.rs  mod.rs  noise.rs  nostr.rs
src-tauri/tests/: privacy_behaviour.rs
src/browser/: compat.js  ipc.js  tabs.js  utils.js
src/features/: echo.js  peek.js  shadow-index.js  tab-groups.js  tos-auditor.js  vault.js  video-pip.js  zen.js
src/ui/: about.html  home-base.html  labs.html  localfiles.html  onboarding.html  vault.html
src/workers/: core.worker.js
