[package]
name        = "diatom"
version     = "0.9.0"
edition     = "2024"
authors     = ["Ansel-S <https://github.com/Ansel-S>"]
description = "Minimalist · zero-tracking · local-AI-native browser"
license     = "BUSL-1.1"
repository  = "https://github.com/Ansel-S/Diatom"
keywords    = ["browser", "privacy", "tauri", "rust"]
categories  = ["web-programming"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                          = { version = "2", features = ["devtools","macos-private-api","tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog            = "2"
tauri-plugin-fs                = "2"
tauri-plugin-http              = "2"
tauri-plugin-notification      = "2"
tauri-plugin-shell             = "2"
tauri-plugin-store             = "2"
tauri-plugin-updater           = "2"
tokio    = { version = "1", features = ["full"] }
futures  = "0.3"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json","stream","cookies","gzip","rustls-tls"] }
url = "2"
rusqlite = { version = "0.31", features = ["bundled","backup"] }
hmac    = "0.12"
sha1    = "0.10"
sha2    = "0.10"
aes-gcm = "0.10"
hkdf    = "0.12"
blake3  = "1"
hex     = "0.4"
base32  = "0.4"
zeroize = { version = "1", features = ["derive"] }
vsss-rs = { version = "4", default-features = false }
rand    = "0.8"
lz4_flex = "0.11"
flate2   = "1"
aho-corasick = "1"
regex        = { version = "1", features = ["perf"] }
scraper   = "0.20"
html5ever = "0.27"
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls"] }
hickory-proto    = "0.24"
chrono = { version = "0.4", features = ["serde"] }
uuid             = { version = "1", features = ["v4","serde"] }
urlencoding      = "2"
once_cell        = "1"
anyhow           = "1"
thiserror        = "1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","json"] }

[features]
default         = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "debuginfo"
panic         = "abort"

[profile.release-small]
inherits  = "release"
opt-level = "z"
lto       = true
strip     = true
