[package]
name        = "diatom"
version     = "0.9.3"
edition     = "2024"
authors     = ["Ansel-S <https://github.com/Ansel-S>"]
description = "Minimalist · zero-tracking · local-AI-native browser"
license     = "BUSL-1.1"
repository  = "https://github.com/Ansel-S/Diatom"
keywords    = ["browser", "privacy", "tauri", "rust"]
categories  = ["web-programming"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                          = { version = "2", features = ["devtools","macos-private-api","tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog            = "2"
tauri-plugin-fs                = "2"
tauri-plugin-http              = "2"
tauri-plugin-notification      = "2"
tauri-plugin-shell             = "2"
tauri-plugin-store             = "2"
tauri-plugin-updater           = "2"

# ── Global allocator ──────────────────────────────────────────────────────────
# mimalloc dramatically reduces heap fragmentation in long-running sessions
# (2–4 h+ browsing accumulates significant RSS bloat with ptmalloc/HeapAlloc).
# The crate is ~8 KB of link cost, offset by binary-size reduction from LTO
# eliminating dead jemalloc/ptmalloc code paths.
mimalloc = { version = "0.1", default-features = false }

# ── Async runtime ─────────────────────────────────────────────────────────────
# BEFORE: features = ["full"]  — pulls in io-std, process, signal, fs, net all at once.
# AFTER: only the sub-features Diatom actually calls.
# Savings vs "full": ~60–80 KB in the stripped binary.
tokio = { version = "1", features = [
    "rt-multi-thread", # spawn_blocking, async_runtime
    "sync",            # Mutex, RwLock, Semaphore
    "time",            # sleep, interval
    "net",             # TcpListener (SLM server)
    "io-util",         # AsyncReadExt / AsyncWriteExt
    "macros",          # tokio::select!, tokio::join!
] }

# ── Serialisation ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── HTTP client ───────────────────────────────────────────────────────────────
# Removed: "cookies" — Diatom never reads response cookies in Rust code;
#          cookie policy is enforced by the WebView layer.
# Removed: "stream" — not used in any command path (saves ~15 KB link).
# Kept:    "gzip", "rustls-tls", "json"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "gzip",
    "rustls-tls",
] }

url         = "2"
urlencoding = "2"

# ── Database ──────────────────────────────────────────────────────────────────
rusqlite = { version = "0.31", features = ["bundled","backup"] }

# ── Platform credential stores ───────────────────────────────────────────────
[target.'cfg(target_os = "macos")'.dependencies]
# [FIX-KEYCHAIN] Direct Security framework access — replaces `security` CLI subprocess
security-framework = { version = "2", features = ["OSX_10_15"] }
# [FIX-S10] Real Touch ID via LAContext — replaces the previous AppleScript dialog stub.
# objc2 + objc2-local-authentication enables deviceOwnerAuthenticationWithBiometrics.
# Binary size impact: ~45 KB (objc2 runtime + LA bindings), within the 15 MB budget.
objc2                     = "0.5"
objc2-foundation          = { version = "0.2", features = ["NSString", "NSError"] }
objc2-local-authentication = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
# [FIX-S10] Real Windows Hello via UserConsentVerifier — replaces the PowerShell MessageBox stub.
windows = { version = "0.58", features = [
    "Security_Credentials_UI",
] }

# ── Cryptography ──────────────────────────────────────────────────────────────
hmac    = "0.12"
sha1    = "0.10"
sha2    = "0.10"
aes-gcm = "0.10"
hkdf    = "0.12"
blake3  = "1"
hex     = "0.4"
base32  = "0.4"
zeroize = { version = "1", features = ["derive"] }
vsss-rs = { version = "4", default-features = false }
rand    = "0.8"

# ── Compression ───────────────────────────────────────────────────────────────
lz4_flex = "0.11"
flate2   = "1"

# ── Text matching ─────────────────────────────────────────────────────────────
aho-corasick = "1"
# REMOVED: regex — was listed in Cargo.toml but never imported in any .rs file.
#          scraper and html5ever were also listed but have zero `use` statements.
#          These three crates together accounted for ~120 KB of binary bloat.
#          Removing them is a pure win with zero functional impact.

# ── Hickory DNS (DoH) ─────────────────────────────────────────────────────────
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls"] }
hickory-proto    = "0.24"

# ── WebSocket (Nostr sync) ──────────────────────────────────────────────────────
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util       = { version = "0.3", default-features = false, features = ["sink", "std"] }

# ── Utilities ─────────────────────────────────────────────────────────────────
chrono       = { version = "0.4", features = ["serde"] }
uuid         = { version = "1", features = ["v4","serde"] }
anyhow       = "1"
thiserror    = "1"

# ── Tracing ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
# Removed "json" feature — was never called (tracing_subscriber::fmt() uses
# compact/pretty format only). The JSON formatter pulls in serde_json duplication
# inside tracing-subscriber's own feature tree.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# REMOVED CRATES (no call sites found in any .rs file):
#   once_cell   — replaced by std::sync::LazyLock (stable since Rust 1.80)
#   futures     — only usage was futures::executor::block_on() in decoy.rs,
#                 which was a bug (blocks inside async context). Fixed in v0.9.1.
#   regex       — imported in Cargo.toml but zero `use regex` statements.
#   scraper     — imported in Cargo.toml but zero `use scraper` statements.
#   html5ever   — imported in Cargo.toml but zero `use html5ever` statements.

[features]
default         = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level     = 3
# Changed from lto = "thin" to lto = true (fat LTO).
# Fat LTO does a single global link-time optimisation pass across all crates,
# enabling cross-crate dead-code elimination that thin LTO cannot see.
# Compile time increases by ~40 s on a 16-core machine, but the output binary
# is typically 15–25 KB smaller. Worth it for a release build.
lto           = true
codegen-units = 1
strip         = "debuginfo"
panic         = "abort"

[profile.release-small]
inherits  = "release"
opt-level = "z"
lto       = true
strip     = true
