[package]
name        = "diatom"
version     = "1.0.0"
edition     = "2024"
authors     = ["asong56 <https://github.com/asong56>"]
description = "Minimalist · zero-tracking · local-AI-native browser"
license     = "BlueOak-1.0.0"
repository  = "https://github.com/asong56/Diatom"
keywords    = ["browser", "privacy", "tauri", "rust"]
categories  = ["web-programming"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                          = { version = "2", features = ["devtools", "macos-private-api", "tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog            = "2"
tauri-plugin-fs                = "2"
tauri-plugin-http              = "2"
tauri-plugin-shell             = "2"
tauri-plugin-store             = "2"
tauri-plugin-notification      = "2"
# tauri-plugin-updater removed — auto-update replaced by user-triggered strip-zed.sh

diatom_bridge = { path = "../shell/crates/diatom_bridge" }

# mimalloc reduces heap fragmentation in long-running sessions.
# `secure` feature adds per-segment randomisation and inline canaries.
mimalloc = { version = "0.1", default-features = false, features = ["secure"] }

tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "net",
    "io-util",
    "process",
    "macros",
] }
tokio-util = { version = "0.7" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "gzip",
    "rustls-tls",
] }

url         = "2"
urlencoding = "2"

rusqlite = { version = "0.31", features = ["bundled","backup"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework         = { version = "2", features = ["OSX_10_15"] }
objc2                      = "0.5"
objc2-foundation           = { version = "0.2", features = ["NSString", "NSError"] }
objc2-local-authentication = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Security_Credentials_UI"] }

hmac    = "0.12"
sha1    = "0.10"
sha2    = "0.10"
aes-gcm = "0.10"
hkdf    = "0.12"
blake3  = "1"
hex     = "0.4"
base32 = "0.4"
zeroize = { version = "1", features = ["derive"] }
# subtle: constant-time comparison for Bearer token validation (Bug 2 fix).
# Prevents timing side-channel attacks where a local attacker measures response
# latency to guess the MCP auth token one byte at a time.
subtle  = "2"
rand    = "0.8"
snow    = { version = "0.9", features = ["default-resolver"] }
p256    = { version = "0.13", features = ["ecdh"] }
secp256k1 = { version = "0.28", features = ["rand-std", "global-context"] }

lz4_flex = "0.11"
flate2   = "1"

image = { version = "0.25", default-features = false, features = ["png"] }

csv    = "1.3"
base64 = "0.22"

# regex, scraper, html5ever removed — zero call sites, saved ~120 KB.
aho-corasick = "1"

hickory-resolver = { version = "0.25", features = ["dns-over-https-rustls"] }
hickory-proto    = "0.25"

tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util      = { version = "0.3", default-features = false, features = ["sink", "std"] }

chrono    = { version = "0.4", features = ["serde"] }
uuid      = { version = "1", features = ["v4","serde"] }
anyhow    = "1"
thiserror = "1"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default         = ["custom-protocol", "labs"]
custom-protocol = ["tauri/custom-protocol"]
labs            = []
labs_alpha      = []
full            = ["labs", "labs_alpha"]
# plugin-sandbox = ["dep:wasmtime", "dep:wasmtime-wasi"]

[profile.dev]
opt-level = 1

# Binary size target: ≤ 10 MB (release-small profile)
# Achieved via: LTO + strip + opt-z + panic=abort + dep feature pruning
[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = "debuginfo"
panic         = "abort"

[profile.release-small]
inherits      = "release"
opt-level     = "z"
lto           = true
strip         = true
codegen-units = 1
panic         = "abort"
