[package]
name        = "diatom_devtools"
version     = "0.1.0"
edition     = "2024"
description = "Browser DevPanel — Console, Network, Sources panels (v1 scope)"
license     = "BlueOak-1.0.0"

# ── DevPanel v1 scope (architecture doc §5.5) ─────────────────────────────────
#
# v1 implements only: Console panel, Network panel, Sources panel.
# These three panels cover the primary developer use-case (understanding what
# the current page is doing) and have manageable Zed API surface.
#
# Deferred to v2 (after Zed dependency management matures):
#   - DAP debugger     (dap, dap_adapters, debugger_ui)
#   - Git UI           (git_ui)
#   - Terminal         (terminal, terminal_view)
#   - Full workspace   (worktree, project, workspace-crate, outline_panel, project_panel)
#   - Extension host   (extension_host, node_runtime)
#
# v1 Zed API footprint is ~60% smaller than the full DevPanel. This directly
# reduces the blast radius of quarterly Zed sync windows.
#
# When v2 features are ready, add their crates back here and document the
# justification in the PR (see .github/PULL_REQUEST_TEMPLATE.md).

[[bin]]
name = "diatom-devpanel"
path = "src/main.rs"

[dependencies]
# ── Diatom bridge ──────────────────────────────────────────────────────────────
diatom_bridge  = { path = "../diatom_bridge" }
diatom_ui      = { path = "../diatom_ui" }

# ── GPUI core (required for window + rendering) ───────────────────────────────
gpui           = { path = "../gpui" }
ui             = { path = "../ui" }

# ── Editor core — Sources panel needs syntax highlighting ─────────────────────
# Kept at minimum: editor + language only (no lsp client, no project model).
# The Sources panel renders read-only highlighted source text; it does not
# provide code intelligence.
editor         = { path = "../editor" }
language       = { path = "../language" }

# ── Settings / theme ──────────────────────────────────────────────────────────
settings       = { path = "../settings" }
theme          = { path = "../theme" }

# ── Utilities ─────────────────────────────────────────────────────────────────
util           = { path = "../util" }
fs             = { path = "../fs" }

# ── Third-party ───────────────────────────────────────────────────────────────
anyhow     = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "macros"] }
futures    = "0.3"
log        = "0.4"
env_logger = "0.11"
smol       = "2"

# ── Removed from v1 (deferred to v2) ─────────────────────────────────────────
# terminal       = { path = "../terminal" }          # v2: integrated terminal
# terminal_view  = { path = "../terminal_view" }     # v2: integrated terminal
# dap            = { path = "../dap" }               # v2: DAP debugger
# dap_adapters   = { path = "../dap_adapters" }      # v2: DAP debugger
# debugger_ui    = { path = "../debugger_ui" }       # v2: DAP debugger
# git_ui         = { path = "../git_ui" }            # v2: Git history UI
# project        = { path = "../project" }           # v2: full project model
# workspace-crate = { path = "../workspace", ... }   # v2: workspace layout
# worktree       = { path = "../worktree" }          # v2: file tree
# outline_panel  = { path = "../outline_panel" }     # v2: code outline
# project_panel  = { path = "../project_panel" }     # v2: file explorer
# extension_host = { path = "../extension_host" }    # v2: WASM extensions
# node_runtime   = { path = "../node_runtime" }      # v2: Node.js tools
# inspector_ui   = { path = "../inspector_ui" }      # v2: DOM inspector
# search         = { path = "../search" }            # v2: project-wide search