[package]
name        = "diatom_ui"
version     = "0.1.0"
edition     = "2024"
description = "Stable UI trait facade isolating Diatom from GPUI internals (P2 Axiom-15 guard)"
license     = "BlueOak-1.0.0"

# This crate defines the UiRenderer trait and the concrete GpuiRenderer that
# implements it. All DevPanel code depends on `diatom_ui`, never on gpui
# directly. When GPUI's unstable API changes, only the impl block here needs
# updating — no churn in the DevPanel crates.
#
# The pattern also makes the GPUI dependency swappable: if GPUI becomes
# unmaintained or changes its licence, a new impl (e.g. `WryRenderer`) can
# be dropped in without touching upstream code.

[dependencies]
gpui       = { path = "../gpui" }
anyhow     = "1"
serde      = { version = "1", features = ["derive"] }